@@ -884,6 +884,7 @@ BEGIN
       SELECT right_face FROM edge
     )
   LOOP --{
+    invalid_faces := array_append(invalid_faces, rec.id1);
     retrec.error = 'face without edges';
     retrec.id1 = rec.id1;
     retrec.id2 = NULL;
