@@ -38,3 +38,5 @@
 #5105.edges_count|2
 #5105.faces_count|0
 #5403.0|1
+#5548.0|1
+#5548.1|face without edges|1|
